--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,22 @@
   }
 } */
 
+/*========== Scrollbar ==========*/
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  overflow: hidden;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(173, 182, 191);
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888892; 
+}
+
