--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,11 @@
 
 /*========== Scrollbar ==========*/
 
+
 /* width */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
   overflow: hidden;
 }
 
