--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 .dark-stroke {
   -webkit-text-stroke: 0.7px white !important;
-  mix-blend-mode: difference;
+    mix-blend-mode: difference;
 }
 
 /* .light-stroke {
@@ -29,10 +29,20 @@ body {
       0 0 151px #FF00C7;
 } */
 
+.marquee-animate {
+  animation: scroll 8s linear infinite;
+}
+
+@keyframes scroll {
+  from {transform: translateX(0)}
+  to {transform: translateX(-50%)}
+}
+
 .cursor {
-  width: 16px;
-  height: 16px;
+  width: 40px;
+  height: 40px;
   background-color: #fff; /* Background color of the cursor */
+  border: 4px solid #fff;
   border-radius: 50%;
   position: fixed;
   pointer-events: none;
@@ -43,10 +53,10 @@ body {
 
 @keyframes glow {
   0% {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
   }
   100% {
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 80px rgb(226, 226, 226);
   }
 }
 
