--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --scrollbar-track-light: #F6FDFF; /* Light mode scrollbar track color */
-  --scrollbar-track-dark: theme('backgroundColor.dark'); /* Dark mode scrollbar track color */
+  --light: theme('colors.light');
+  --dark: theme('colors.dark');
+  --neon-pink: theme('colors.neon-pink');
+  --neon-blue: theme('colors.neon-blue');
+  --neon-yellow: theme('colors.neon-yellow');
+  --neon-green: theme('colors.neon-green');
 }
 
 * {
@@ -16,11 +20,11 @@ body {
 }
 
 .neon-stroke {
-  -webkit-text-stroke: 1px theme('backgroundColor.dark');
+  -webkit-text-stroke: 1.5px var(--dark);
 }
 
 .dark .neon-stroke {
-  -webkit-text-stroke: 1px theme('colors.neon-pink');
+  -webkit-text-stroke: 1.5px var(--neon-pink);
     
 }
 
@@ -28,18 +32,23 @@ body {
   -webkit-text-stroke: 1px white !important;
 } */
 
-/* .text-glow {
+.dark .text-glow {
   animation: flicker 0.5s infinite alternate;
   text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px theme('colors.neon-pink'),
-      0 0 82px theme('colors.neon-pink'),
-      0 0 92px theme('colors.neon-pink'),
-      0 0 102px theme('colors.neon-pink'),
-      0 0 151px theme('colors.neon-pink');
-} */
+      0 0 120px var(--neon-pink),
+      0 0 6px var(--dark),
+      0 0 50px var(--dark),
+      0 0 4px var(--neon-pink),
+      0 0 8px var(--neon-pink);
+}
+
+.stroke-color {
+  stroke: var(--dark);
+}
+
+.dark .stroke-color {
+  stroke: var(--neon-pink);
+}
 
 /*========== Marquee ==========*/
 
@@ -57,13 +66,12 @@ body {
 .cursor {
   width: 20px;
   height: 20px;
-  background-color: #fff; /* Background color of the cursor */
-  border: 4px solid #fff;
+  background-color: var(--neon-yellow); /* Background color of the cursor */
+  border: 4px solid var(--neon-yellow);
   border-radius: 50%;
   position: fixed;
   pointer-events: none;
   z-index: 9999;
-  mix-blend-mode: difference; /* Optional blend mode for the glowing effect */
   animation: glow 1s ease infinite alternate; /* Add a glowing animation */
 }
 
@@ -98,10 +106,10 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: var(--scrollbar-track-light); 
+  background-color: var(--light); 
 }
 
 .dark ::-webkit-scrollbar-track {
-  background-color: var(--scrollbar-track-dark);
+  background-color: var(--dark);
 }
 
