--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 :root {
   --light: theme('colors.light');
   --dark: theme('colors.dark');
+  --dark-2: theme('colors.dark-2');
   --neon-pink: theme('colors.neon-pink');
   --neon-blue: theme('colors.neon-blue');
   --neon-yellow: theme('colors.neon-yellow');
@@ -15,12 +16,8 @@
   scroll-behavior: smooth;
 }
 
-body {
-  cursor: none;
-}
-
 .neon-stroke {
-  -webkit-text-stroke: 1.5px var(--dark);
+  -webkit-text-stroke: 0px var(--dark-2);
 }
 
 .dark .neon-stroke {
@@ -28,26 +25,14 @@ body {
     
 }
 
-/* .light-stroke {
-  -webkit-text-stroke: 1px white !important;
-} */
-
 .dark .text-glow {
   animation: flicker 0.5s infinite alternate;
   text-shadow:
-      0 0 120px var(--neon-pink),
+      0 0 150px var(--neon-pink),
       0 0 6px var(--dark),
       0 0 50px var(--dark),
       0 0 4px var(--neon-pink),
       0 0 8px var(--neon-pink);
-}
-
-.stroke-color {
-  stroke: var(--dark);
-}
-
-.dark .stroke-color {
-  stroke: var(--neon-pink);
 }
 
 /*========== Marquee ==========*/
