--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,16 @@
   scroll-behavior: smooth;
 }
 
+body {
+  background-color: var(--light);
+  color: var(--dark-2);
+}
+
+.dark body {
+  background-color: var(--dark);
+  color: var(--light);
+}
+
 .neon-stroke {
   -webkit-text-stroke: 0px var(--dark-2);
 }
