--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
   content: "";
   width: 30px;
   height: 30px;
-  background-image: url('./assets/cursor.svg');
+  background-image: url('./assets/arrow.svg');
   background-size: 80%; /* Adjust as needed */
   background-repeat: no-repeat;
   background-position: center;
